# network

./: CMakeLists.txt  README.md
include/: cgp_feedforward.h  circuitable.h  devnetwork.h  feedforward.h  graph_algorithm.h  network.h  neuron.h  output.h  recurrent.h  synapse.h
network_test/: CMakeLists.txt  test.cpp
src/: cgp_feedforward.cpp  devnetwork.cpp  feedforward.cpp  graph_algorithm.cpp  network.cpp  neuron.cpp  output.cpp  recurrent.cpp  synapse.cpp
